working on the navbar: -implemented the nav menu for smaller devices. -finished with the styling and positioning. *to do: *fix issue where slider products are overlapping the nav menu while active.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,6 +88,11 @@ header {
   align-items: center;
   padding-inline: 1rem;
 }
+.container-navbar {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -104,11 +109,6 @@ nav {
   gap: 1.5rem;
   align-items: center;
 }
-.burger-menu {
-  height: 100%;
-  width: 4em;
-  background-color: red;
-}
 
 /* HOME */
 .bg-img {
@@ -122,6 +122,7 @@ nav {
   padding-bottom: 0.15rem;
 }
 ul {
+  margin-top: 13px;
   padding-left: 1rem;
 }
 /* SLIDER SECTION */
@@ -162,6 +163,9 @@ ul {
 }
 .card-title {
   margin: 0;
+}
+.nav-menu.active {
+  overflow: hidden;
 }
 
 /******************************************
@@ -219,4 +223,94 @@ ul {
 .nav-anchor:hover {
   border-bottom: 0.156rem solid rgb(216, 209, 203);
   opacity: 0.9;
+}
+
+/******************************************
+/* MEDIA QUERY
+/*******************************************/
+
+@media (max-width: 35rem) {
+  /* Navbar CSS */
+  nav {
+    align-items: flex-start;
+  }
+  .navbar {
+    height: 80px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    z-index: 9999;
+  }
+  .menu-bars {
+    margin-left: 2rem;
+    font-size: 1.85rem;
+    background: none;
+    color: var(--clr-font-primary);
+  }
+  .nav-menu {
+    background-color: var(--clr-background-primary);
+    max-width: 15.625rem;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    transition: 850ms;
+    z-index: 999;
+  }
+  .nav-menu.active {
+    right: 0;
+    transition: 450ms;
+  }
+  .nav-menu.active .menu-bars {
+    color: var(--clr-font-primary);
+  }
+  .nav-text {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+  }
+  .nav-text a {
+    text-decoration: none;
+    color: var(--clr-font-primary);
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+  }
+  .nav-text a:hover {
+    background-color: #000000;
+    color: #fff;
+  }
+  .nav-menu-items {
+    width: 100%;
+  }
+  .navbar-toggle {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .sidebar-span {
+    margin-left: 16px;
+  }
+  .home,
+  .reports,
+  .products {
+    display: flex;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    background-color: #000;
+    color: #fff;
+  }
 }
